# Catrace

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  README_EN.md  index.html  package.json  pnpm-lock.yaml
.agent/: manifest.yaml
.agent/architecture/database/: README.md
.agent/architecture/platform-input/: README.md
.agent/architecture/project-structure/: README.md
.agent/architecture/security/: README.md
.agent/architecture/theme/: README.md
.agent/bugs/: 2026-07-10-toast-concurrent-crash.md  2026-07-10-toast-stacking-display.md
.agent/decisions/: 2026-07-07-drop-rdev-for-device-query.md  gsmtcsm-removal.md  popup-removal-pending.md  window-focus-refactor.md
.agent/devlog/: 2026-07-07-drop-rdev.md  2026-07-09-logging.md  2026-07-10-eye-reminder-rest-reset.md  2026-07-10-eye-reminder.md  2026-07-11-eye-toast-snooze-skip-buttons.md  2026-07-11-toast-卡片缩小到原生尺寸-和阴影修复.md
.agent/features/auto-update/: README.md
.agent/features/dashboard/: README.md
.agent/features/eye-reminder/: README.md
.agent/features/fullscreen-reminder/: README.md
.agent/features/i18n/: README.md
.agent/features/input-monitoring/: README.md
.agent/features/logging/: README.md
.agent/features/media-audio/: README.md
.agent/features/reminder/: README.md
.agent/features/report/: README.md
.agent/features/settings/: README.md
.agent/features/timeline/: README.md
.agent/features/toast-window/: README.md  dedicated-card-renders-own-body-generic-template-must-exclude-it.md  development-notes.md  toast-卡片紧凑尺寸规范-和阴影防裁剪出血方案.md
.agent/features/water-reminder/: README.md
.agent/reference/: config-reference.md  test-strategy.md  version-management.md
.github/workflows/: release.yml
docs/: popup-reminder-development-notes.md  reminder-development-notes.md  todo.md  version-management.md  window-focus-refactor-notes.md
src/: App.vue  main.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  eye.rs  lib.rs  log.rs  main.rs  media_audio.rs  reminder.rs  reminder_toast.rs  report.rs  water.rs
src-tauri/src/window_manager/: mod.rs  windows.rs
src/api/: tauri.ts
src/components/: EyeToastCard.vue  LogViewer.vue  RestTimerBall.vue  Timeline.vue  TimelineWindows.vue  WaterWidget.vue
src/components/settings/: EyeSettingsCard.vue  LinksSettingsCard.vue  MediaSettingsCard.vue  NotificationSettingsCard.vue  ReminderSettingsCard.vue  SettingRow.vue  SliderControl.vue  SystemSettingsCard.vue  WaterSettingsCard.vue
src/composables/: useAutoSavedSetting.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/router/: index.ts
src/utils/: locale.ts  timeBlocks.ts
src/views/: Dashboard.vue  Debug.vue  ReminderFullscreen.vue  ReminderPopup.vue  ReminderToast.vue  Settings.vue
website/: index.html
