[package]
name = "catrace"
version = "26.5.31"
description = "工作与休息平衡提醒工具"
authors = ["lanxiuyun"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "catrace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
device_query = "1.1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
active-win-pos-rs = "0.10"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7"
windows-registry = "0.5"

